--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "yargs": "~1.3.2",
-    "winston": "~0.8.1"
+    "winston": "~0.8.1",
+    "avconv": "~2.0.0"
   }
 }
