--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "url": "http://github.com/Jalle19/node-ffmpeg-mpegts-proxy/issues"
   },
   "dependencies": {
-    "yargs": "~1.3.2",
+    "avconv": "~2.0.0",
+    "chokidar": "^0.10.9",
     "winston": "~0.8.1",
-    "avconv": "~2.0.0"
+    "yargs": "~1.3.2"
   }
 }
