--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "chokidar": "^0.10.9",
+    "sleep": "^4.0.0",
     "winston": "~0.8.1",
     "yargs": "~1.3.2"
   }
