--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "email": "neggelandia@gmail.com"
   },
   "keywords": [],
-  "licenses": {
-    "type": "gpl20"
-  },
+  "license": "GPL-2.0",
   "repository": {
     "type": "git",
     "url": "git://github.com/Jalle19/node-ffmpeg-mpegts-proxy.git"
