--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: node_js
-sudo: false
+sudo: required
+dist: trusty
+services:
+  - docker
 node_js:
   - "0.12"
   - "4"
   - "6"
   - "8"
   - "10"
+script:
+  - docker build -t jalle19/node-ffmpeg-mpegts-proxy .
